intellij/org.eclipse.xtext.core.idea.tests/src-gen/org/eclipse/xtext/lexer/idea/parser/antlr/internal/PsiInternalBacktrackingLexerTestLanguage.g
/*
 * generated by Xtext
 */
grammar PsiInternalBacktrackingLexerTestLanguage;

options {
	superClass=AbstractPsiAntlrParser;
	backtrack=true;
	memoize=true;
}

@lexer::header {
package org.eclipse.xtext.lexer.idea.parser.antlr.internal;

// Hack: Use our own Lexer superclass by means of import. 
// Currently there is no other way to specify the superclass for the lexer.
import org.eclipse.xtext.parser.antlr.Lexer;
}

@parser::header {
package org.eclipse.xtext.lexer.idea.parser.antlr.internal;

import org.eclipse.xtext.idea.parser.AbstractPsiAntlrParser;
import org.eclipse.xtext.lexer.idea.lang.BacktrackingLexerTestLanguageElementTypeProvider;
import org.eclipse.xtext.idea.parser.TokenTypeProvider;
import org.eclipse.xtext.lexer.services.BacktrackingLexerTestLanguageGrammarAccess;

import com.intellij.lang.PsiBuilder;
}

@parser::members {

/*
  This grammar contains a lot of empty actions to work around a bug in ANTLR.
  Otherwise the ANTLR tool will create synpreds that cannot be compiled in some rare cases.
*/

private BacktrackingLexerTestLanguageGrammarAccess grammarAccess;

private BacktrackingLexerTestLanguageElementTypeProvider elementTypeProvider;

public PsiInternalBacktrackingLexerTestLanguageParser(PsiBuilder builder, TokenStream input, TokenTypeProvider tokenTypeProvider, BacktrackingLexerTestLanguageElementTypeProvider elementTypeProvider, BacktrackingLexerTestLanguageGrammarAccess grammarAccess) {
	super(builder, input, tokenTypeProvider);
    this.grammarAccess = grammarAccess;
	this.elementTypeProvider = elementTypeProvider;
}

@Override
protected String getFirstRuleName() {
	return "Model";
}

}

//Entry rule entryRuleModel
entryRuleModel:
	{ markComposite(elementTypeProvider.getModelElementType()); }
	ruleModel
	{ doneComposite(); }
	EOF;
finally {
}

// Rule Model
ruleModel:
	(
		(
			(
				{
					markComposite(elementTypeProvider.getModel_EnumsEnumNameEnumRuleCall_0_0ElementType());
				}
				lv_enums_0_0=ruleEnumName
				{
					doneComposite();
				}
			)
		)*
		(
			(
				{
					markLeaf();
				}
				lv_ycs_1_0=RULE_YC
				{
					doneLeaf(lv_ycs_1_0, elementTypeProvider.getModel_YcsYcTerminalRuleCall_1_0ElementType());
				}
			)
		)*
		(
			(
				{
					markComposite(elementTypeProvider.getModel_AbsAbParserRuleCall_2_0ElementType());
				}
				lv_abs_2_0=ruleAb
				{
					doneComposite();
				}
			)
		)*
		(
			(
				{
					markComposite(elementTypeProvider.getModel_XbsXbParserRuleCall_3_0ElementType());
				}
				lv_xbs_3_0=ruleXb
				{
					doneComposite();
				}
			)
		)*
		(
			(
				{
					markLeaf();
				}
				lv_ys_4_0=RULE_CHARY
				{
					doneLeaf(lv_ys_4_0, elementTypeProvider.getModel_YsCharYTerminalRuleCall_4_0ElementType());
				}
			)
		)*
		(
			(
				{
					markLeaf();
				}
				lv_as_5_0=RULE_CHARA
				{
					doneLeaf(lv_as_5_0, elementTypeProvider.getModel_AsCharATerminalRuleCall_5_0ElementType());
				}
			)
		)*
	)
;

//Entry rule entryRuleAb
entryRuleAb:
	{ markComposite(elementTypeProvider.getAbElementType()); }
	ruleAb
	{ doneComposite(); }
	EOF;
finally {
}

// Rule Ab
ruleAb:
	(
		(
			(
				{
					markLeaf();
				}
				lv_x_0_0=RULE_CHARA
				{
					doneLeaf(lv_x_0_0, elementTypeProvider.getAb_XCharATerminalRuleCall_0_0ElementType());
				}
			)
		)
		(
			(
				{
					markLeaf();
				}
				lv_y_1_0=RULE_CHARB
				{
					doneLeaf(lv_y_1_0, elementTypeProvider.getAb_YCharbTerminalRuleCall_1_0ElementType());
				}
			)
		)
	)
;

//Entry rule entryRuleXb
entryRuleXb:
	{ markComposite(elementTypeProvider.getXbElementType()); }
	ruleXb
	{ doneComposite(); }
	EOF;
finally {
}

// Rule Xb
ruleXb:
	(
		(
			(
				{
					markLeaf();
				}
				lv_x_0_0=RULE_CHARX
				{
					doneLeaf(lv_x_0_0, elementTypeProvider.getXb_XCharXTerminalRuleCall_0_0ElementType());
				}
			)
		)
		(
			(
				{
					markLeaf();
				}
				lv_y_1_0=RULE_CHARB
				{
					doneLeaf(lv_y_1_0, elementTypeProvider.getXb_YCharbTerminalRuleCall_1_0ElementType());
				}
			)
		)
	)
;

// Rule EnumName
ruleEnumName:
	(
		(
			{
				markLeaf();
			}
			enumLiteral_0='Abc'
			{
				doneLeaf(enumLiteral_0, elementTypeProvider.getEnumName_AbcEnumLiteralDeclaration_0ElementType());
			}
		)
		    |
		(
			{
				markLeaf();
			}
			enumLiteral_1='Efg'
			{
				doneLeaf(enumLiteral_1, elementTypeProvider.getEnumName_EfgEnumLiteralDeclaration_1ElementType());
			}
		)
	)
;

RULE_CHARA : 'A';

RULE_CHARB : 'b';

RULE_CHARX : 'X';

RULE_YC : RULE_CHARY RULE_CHARC;

RULE_CHARY : 'Y';

RULE_CHARC : 'c';

RULE_WS : (' '|'\t'|'\r'|'\n')+;

RULE_SL_COMMENT : '//' ~(('\n'|'\r'))* ('\r'? '\n')?;
